@@ -1,0 +1,2 @@
+@comment $NetBSD$
+${RUBY_SITEARCHLIBDIR}/fastthread.${RUBY_DLEXT}
